--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -2,31 +2,52 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 15px 20px;
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  padding: 10px;
+  background-color: #f1f1f1;
 }
 
-.storybook-header svg {
-  display: inline-block;
-  vertical-align: top;
+.left, .center, .right {
+  display: flex;
+  align-items: center;
 }
 
-.storybook-header h1 {
-  display: inline-block;
-  vertical-align: top;
-  margin: 6px 0 6px 10px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1;
+.left {
+  flex: 1;
 }
 
-.storybook-header button + button {
+.center {
+  flex: 2;
+  justify-content: center;
+  text-align: center;
+}
+
+.right {
+  flex: 1;
+  justify-content: flex-end;
+}
+
+button {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.back-button {
+  font-size: 2rem;
   margin-left: 10px;
 }
 
-.storybook-header .welcome {
+.search-button {
+  font-size: 1.5rem;
   margin-right: 10px;
-  color: #333;
-  font-size: 14px;
+}
+
+.welcome {
+  font-size: 1rem;
+  margin-right: 10px;
+}
+
+button:focus {
+  outline: none;
 }
