--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -51,3 +51,35 @@ button {
 button:focus {
   outline: none;
 }
+
+.search-form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+}
+
+.search-input {
+  width: 100%;
+  padding: 5px 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-input:focus {
+  outline: none;
+  border-color: #555;
+}
+
+.close-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-left: 5px;
+  font-size: 1.5rem;
+}
+
+.close-button:focus {
+  outline: none;
+}
